--- a/views/register.ejs
+++ b/views/register.ejs
@@ -5,7 +5,7 @@
         <i class="fas fa-user-plus"></i> Register
       </h1>
 
-      <form action="/users/register" method="POST">
+      <form action="/register" method="POST">
         <div class="form-group">
           <label for="name">Name</label>
           <input
@@ -15,6 +15,7 @@
             class="form-control"
             placeholder="Enter Name"
             value="<%= typeof name != 'undefined' ? name : '' %>"
+            required
           />
         </div>
         <div class="form-group">
